fix: Responsive readability
Added max width of 800 px and auto margin and edited properties for three screen sizes for readability.

--- a/resources/css/over_mij.css
+++ b/resources/css/over_mij.css
@@ -2,24 +2,6 @@ body {
     background-color: rgb(6, 0, 14);   
 }
 
-p {
-    font-size: 20px;
-    color: rgb(183, 137, 239);
-    text-align: center;
-    font-family: "Lato", serif;
-    font-weight: 400;
-    font-style: normal;
-}
-
-h1 {
-    font-family: "Pacifico", serif;
-    font-weight: 400;
-    font-style: normal;
-    font-size: 70px;
-    text-align: center;
-    color: #f011c5;
-}
-
 /*navigation bar*/
 
 .nav_bar ul {
@@ -54,15 +36,34 @@ h1 {
     display: inline-block;
 }
 
-@media screen and (max-width: 1185px) {
-    p {
-    margin: 40px 300px 20px 300px;
-    }
+/* Styling fonts */
+
+p {
+    font-size: 20px;
+    color: rgb(183, 137, 239);
+    text-align: center;
+    font-family: "Lato", serif;
+    font-weight: 400;
+    font-style: normal;
+    width: 800px;
+    margin: 0 auto;
 }
 
-@media screen and (max-width: 1024px) {
+h1 {
+    font-family: "Pacifico", serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 70px;
+    text-align: center;
+    color: #f011c5;
+}
 
-    }  
+@media screen and (max-width: 1185px) {
+
+    p {
+        width: 800px;
+    }
+}
 
 @media screen and (max-width: 800px) {
     h1 {
@@ -70,7 +71,7 @@ h1 {
     }
 
     p {
-        margin: 20px 100px 20px 100px;
+        width: 600px;
     }
 }
 
@@ -78,7 +79,6 @@ h1 {
 
     p {
         font-size: 18px;
-        margin: 20px 50px 20px 50px;
     }
 
     .nav_bar a {
@@ -92,7 +92,7 @@ h1 {
     p {
         font-size: 16px;
         text-align: left;
-        margin: 20px 10px 20px 10px;
+        width: 400px;
     }
 
     .nav_bar a {
@@ -100,4 +100,12 @@ h1 {
         font-weight: normal;
     } 
 }
+
+@media screen and (max-width: 325px) { 
+
+    p {
+        width: 310px;
+    }
+}
+
        
